Fixed overlapping elements in topbar-h3 and icon

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 .topbar-h3 {
-    float: left; padding: 0px 50px;  margin-top: 10px; color: #71368a; position: absolute
+    float: left; margin-left: 50px;  margin-top: 10px; color: #71368a; position: absolute
 }
 
 .topbar-h3-right {
